getEnvConfigs + swagger file update
